--- a/.xc7n-ci.yml
+++ b/.xc7n-ci.yml
@@ -53,6 +53,10 @@ docker-build:
     fi
     source .auto_devops.sh
     function docker_build(){
+        DOCKER_REGISTRY=registry.cn-hangzhou.aliyuncs.com
+        DOCKER_USER=youyf@1605435682286633
+        DOCKER_PWD=Abcd12345
+
         cp /cache/${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}/app.jar ${1:-"src/main/docker"}/app.jar || true
         docker build --pull -t ${DOCKER_REGISTRY}/${GROUP_NAME}/${PROJECT_NAME}:${CI_COMMIT_TAG} ${1:-"src/main/docker"}
         docker login ${DOCKER_REGISTRY} -u ${DOCKER_USER} -p ${DOCKER_PWD}
