--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost/base_service?useUnicode=true&characterEncoding=utf-8&useSSL=false&useInformationSchema=true&remarks=true
-    username: choerodon
-    password: 123456
+    url: jdbc:mysql://192.168.16.214:3306/base_service?useUnicode=true&characterEncoding=utf-8&useSSL=false&useInformationSchema=true&remarks=true
+    username: root
+    password: handhand
   redis:
     host: localhost
     port: 6379
@@ -36,6 +36,8 @@ ribbon:
   ReadTimeout: 10000
   ConnectTimeout: 10000
 choerodon:
+  gateway:
+    url: http://api.example.choerodon.io/
   redisHttpSession:
     enabled: true
   oauth:
